# dlmalloc-rs

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: alloc.rs
fuzz/src/: lib.rs
src/: dlmalloc.rs  dummy.rs  global.rs  lib.rs  linux.rs  macos.rs  sgx.rs  unix.rs  wasm.rs  windows.rs  xous.rs
tests/: global.rs  smoke.rs
