[package]
name = "dlmalloc"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[lib]
doctest = false
test = false

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
libc = { version = "0.2", default-features = false }

[dev-dependencies]
rand = "0.3"

[profile.release]
opt-level = 'z'

[features]
debug = []
