[package]
name = "dlmalloc"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[lib]
doctest = false
test = false

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
libc = { version = "0.2", default-features = false }

[dev-dependencies]
rand = "0.3"

[profile.release]
debug-assertions = true

[features]
# Enable implementations of the `GlobalAlloc` standard library API, exporting a
# new `GlobalDlmalloc` as well which implements this trait.
global = []

# Enable very expensive debug checks in this crate
debug = []

# Enable experimental support for the standard library's unstable allocator API.
allocator-api = []
