[package]
name = "dlmalloc"
version = "0.2.13"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/dlmalloc-rs"
homepage = "https://github.com/alexcrichton/dlmalloc-rs"
documentation = "https://docs.rs/dlmalloc"
description = """
A Rust port of the dlmalloc allocator
"""
exclude = ["src/dlmalloc.c"]
edition.workspace = true

[workspace]
members = ['fuzz']

[workspace.package]
edition = '2021'

[package.metadata.docs.rs]
features = ['global']

[lib]
doctest = false

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
libc = { version = "0.2", default-features = false }

[dependencies]
cfg-if = "1.0"
# This is an internal dep for supporting the nightly toolchain option `-Z build-std`:
# https://github.com/rust-lang/rust/blob/main/library/rustc-std-workspace-core/README.md
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = ">=0.52.0, <=0.61.*"
features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
]

[dev-dependencies]
arbitrary = "1.3.2"
rand = { version = "0.8", features = ['small_rng'] }

[profile.release]
debug-assertions = true

[features]
# Enable implementations of the `GlobalAlloc` standard library API, exporting a
# new `GlobalDlmalloc` as well which implements this trait.
global = []

# Enable very expensive debug checks in this crate
debug = []

rustc-dep-of-std = ['core']
